--- a/index.html
+++ b/index.html
@@ -21,24 +21,21 @@
     <body>
   
 
-        <h1 id="gameHeading" class="animate infinite swing delay-5s">Total Trivia Game</h1>
-
-        <div id="psyGame">
-            <br />
-            <p id="direction-text">Guess what letter I'm thinking of !!!</p>
-            <p>Press any key to start playing</p>
-            <br />
-            <p id="wins-text">Wins:</p>
-            <p id="losses-text">Losses:</p>
-            <p id="guessLeft-text">Guesses Left:</p>
-            <p id="userInput-text">Your Guesses so far:</p>
-            <!-- <p id="computer-text">Computer Guesses so far:</p> -->
-           
-
-        </div>
+       <div class="container">
+           <div class="row">
+                <div id= "timeRemaining"></div>
+                <div id= "questionBlock"></div>
+                <div id= "answerBlock"></div>
+                <button class ="btn btn-success" id ="start">Start Game</button><br>
+                <button class="btn btn-success" id="reset">Play Again?</button>
+           </div>
+       </div>
 
         <!-- Link to javascript file -->
         <script src="assets/javascript/game.js"> </script>
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 
 </html>
