--- a/index.html
+++ b/index.html
@@ -1,41 +1,51 @@
-
 <!DOCTYPE html>
 <html lang="en-us">
 
-    <head>
-        <meta charset="UTF-8">
-        <title>Trivia Game</title>
-        <!-- Cross Browser Compatability -->
-        <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
-        <!--Custom CSS -->
-        <link rel="stylesheet" type="text/css" href="assets/css/style.css">
-        <!-- Google Fonts -->
-        
-        <!-- Animation CSS -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-        <!--Bootstrap Link-->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" 
+<head>
+    <meta charset="UTF-8">
+    <title>Trivia Game</title>
+    <!-- Cross Browser Compatability -->
+    <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+    <!--Custom CSS -->
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <!-- Google Fonts -->
+
+    <!-- Animation CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
+    <!--Bootstrap Link-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
+</head>
 
-    <body>
-  
+<body>
 
-       <div class="container">
-           <div class="row">
-                <div id= "timeRemaining"></div>
-                <div id= "questionBlock"></div>
-                <div id= "answerBlock"></div>
-                <button class ="btn btn-success" id ="start">Start Game</button><br>
-                <button class="btn btn-success" id="reset">Play Again?</button>
-           </div>
-       </div>
+
+    <div class="container">
+        <div class="row">
+            <div id="timer">iiiii</div>
+            <div id="questionBlock">Question</div>
+            <div id="answerBlock">Answerchoices</div>
+            <!-- <button class="btn btn-success" id="start">Start Game</button><br>
+            <button class="btn btn-warning" id="reset">Play Again?</button> -->
+        </div>
+    </div>
+
+    
+    <!-- jquery  -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+   
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 
         <!-- Link to javascript file -->
-        <script src="assets/javascript/game.js"> </script>
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    </body>
+    <script src="assets/javascript/game.js"> </script>
+</body>
 
 </html>
