Writing the logic to count correct, unanswered & incorrect questions & move to next question

--- a/index.html
+++ b/index.html
@@ -21,13 +21,11 @@
 
 
     <div class="container">
-        <div class="row">
-            <div id="timer">iiiii</div>
-            <div id="questionBlock">Question</div>
-            <div id="answerBlock">Answerchoices</div>
-            <!-- <button class="btn btn-success" id="start">Start Game</button><br>
-            <button class="btn btn-warning" id="reset">Play Again?</button> -->
-        </div>
+            <div id="timer"></div>
+            <div id="questionBlock"></div>
+            <div id="answerList"></div>
+            <button class="btn btn-success" id="btn-start">Start Game</button><br>
+            <button class="btn btn-warning" id="btn-reset">Play Again?</button>
     </div>
 
     
