--- a/index.html
+++ b/index.html
@@ -21,11 +21,13 @@
 
 
     <div class="container">
+        <h2>The Ultimate Superhero Trivia</h2>
+        <p>You think you know your super heroes well?? This quiz explores superheroes across both Marvel and DC.</p>
             <div id="timer"></div>
             <div id="questionBlock"></div>
             <div id="answerList"></div>
             <button class="btn btn-success" id="btn-start">Start Game</button><br>
-            <button class="btn btn-warning" id="btn-reset">Play Again?</button>
+            <button class="btn btn-warning" id="btn-reset" style="display:none;">Play Again?</button>
     </div>
 
     
