--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--Custom CSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- Google Fonts -->
-
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Rye" rel="stylesheet">
     <!-- Animation CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <!--Bootstrap Link-->
@@ -19,15 +19,20 @@
 
 <body>
 
-
+    <br/> 
     <div class="container">
-        <h2>The Ultimate Superhero Trivia</h2>
-        <p>You think you know your super heroes well?? This quiz explores superheroes across both Marvel and DC.</p>
-            <div id="timer"></div>
-            <div id="questionBlock"></div>
-            <div id="answerList"></div>
-            <button class="btn btn-success" id="btn-start">Start Game</button><br>
-            <button class="btn btn-warning" id="btn-reset" style="display:none;">Play Again?</button>
+        <br />
+        <h2 class="text-center text-info">The Ultimate Superhero Trivia</h2>
+        <p class="text-center text-danger">You think you know your super heroes well?? This quiz explores superheroes across both Marvel and DC.</p>
+        <hr />
+        <br/>
+        <br/>
+        <div id="timer" class="text-center text-primary"></div>
+        <div id="questionBlock" class="text-center text-success"></div>
+        <div id="answerList" class="text-center text-dark"></div>
+        <center><button class="btn btn-success" id="btn-start">Start Game</button></center>
+        <br />
+        <button class="btn btn-warning" id="btn-reset">Play Again?</button>
     </div>
 
     
