--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <p class="text-center text-danger">You think you know your super heroes well?? This quiz explores superheroes across both Marvel and DC.</p>
         <hr />
         <br/>
-        <br/>
         <div id="timer" class="text-center text-primary"></div>
         <div id="questionBlock" class="text-center text-success"></div>
+        <br/>
         <div id="answerList" class="text-center text-dark"></div>
         <center><button class="btn btn-success" id="btn-start">Start Game</button></center>
         <br />
-        <button class="btn btn-warning" id="btn-reset">Play Again?</button>
+        <center><button class="btn btn-warning" id="btn-reset">Play Again?</button></center>
     </div>
 
     
