remved all console.log commands from the javascript fixed the issue related to displaying the scoreboard

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <div id="answerList" class="text-center text-dark"></div>
         <center><button class="btn btn-success" id="btn-start">Start Game</button></center>
         <br />
-        <center><button class="btn btn-warning" id="btn-reset">Play Again?</button></center>
+        <center><button class="btn btn-warning mb-3" id="btn-reset">Play Again?</button></center>
+        <br/>
+        <br />
     </div>
 
     
